--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Flask_SQLAlchemy>=2.2
-Flask>=1.1.1
-Werkzeug>=0.16.1
-Flask_Login>=0.5.0
-Flask_Mail>=0.9.1
-apscheduler
+Flask_Login==0.5.0
+Flask==1.1.1
+APScheduler==3.6.3
+Flask_SQLAlchemy==2.2
+Werkzeug==0.16.1
+Flask_Mail==0.9.1
