--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-Flask>=1.1.1
-Flask_Testing>=0.8.0
-APScheduler>=3.6.3
-Werkzeug>=0.16.1
-Flask_SQLAlchemy>=2.2
-Flask_Mail>=0.9.1
-Flask_Login>=0.5.0
-pytest-cov>=2.8.1
-gunicorn>=20.0
-psycopg2>=2.8.5
+Flask==1.1.1
+Flask_Testing==0.8.0
+APScheduler==3.6.3
+Werkzeug==0.16.1
+Flask_SQLAlchemy==2.2
+Flask_Mail==0.9.1
+Flask_Login==0.5.0
+pytest-cov==2.8.1
+gunicorn=20.0
+psycopg2==2.8.5
