--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,9 @@ python:
 services:
   - docker
 before_install:
-  - docker build --pull --rm -f "Dockerfile" -t librarymanagamentsystem:latest "."
+  - docker build -t librarymanagamentsystem:latest .
   - docker ps -a
+  - docker run librarymanagamentsystem:latest /bin/sh -c "cd app; pytest"
 install:
   - pip install -r requirements.txt
 before_script:
