--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-Flask_SQLAlchemy>=2.2
-APScheduler>=3.6.3
-SQLAlchemy>=1.3.16
-alembic>=1.4.2
-Flask_Mail>=0.9.1
-Flask_Login>=0.5.0
-Flask_Testing>=0.8.0
-Flask>=1.1.1
-Werkzeug>=0.16.1
-Flask_Migrate>=2.5.3
-gunicorn>=20.0
-psycopg2>=2.8.5
-pytest-cov>=2.8.1
+Flask_SQLAlchemy==2.2
+APScheduler==3.6.3
+SQLAlchemy==1.3.16
+alembic==1.4.2
+Flask_Mail==0.9.1
+Flask_Login==0.5.0
+Flask_Testing==0.8.0
+Flask==1.1.1
+Werkzeug==0.16.1
+Flask_Migrate==2.5.3
+gunicorn==20.0
+psycopg2==2.8.5
+pytest-cov==2.8.1
